// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (trailing-comma) /src/tslint/trailing-comma/test.ts[1, 17]: Unnecessary trailing comma
ERROR: (trailing-comma) /src/tslint/trailing-comma/test.ts[2, 13]: Unnecessary trailing comma

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
const x = { a: 1, };
const y = [1,];

======
const x = { a: 1 };
const y = [1];

>>>>>> after
"
`;
